CustomObjects/objects/invoiceit_s__Payment_Method__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <fields>
        <fullName>invoiceit_s__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payment_Methods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Bank_Account_Name__c</fullName>
        <description>The name associated with the Bank Account</description>
        <inlineHelpText>The name associated with the Bank Account</inlineHelpText>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Bank_Account_Type__c</fullName>
        <description>The type of bank account</description>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CHECKING</fullName>
                </value>
                <value>
                    <fullName>BUSINESSCHECKING</fullName>
                </value>
                <value>
                    <fullName>SAVINGS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Bank_Routing_Code__c</fullName>
        <description>The valid Routing number of the customer’s Bank</description>
        <inlineHelpText>The valid Routing number of the Bank, this is also called as ABA code</inlineHelpText>
        <label>Bank Routing Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Billing_Company__c</fullName>
        <label>Billing Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaidjan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Billing_Fax__c</fullName>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Billing_First_Name__c</fullName>
        <label>Billing First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Billing_Last_Name__c</fullName>
        <label>Billing Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Billing_State_Province__c</fullName>
        <inlineHelpText>Used by ePDQ Gateway (text input vs US state picklist)</inlineHelpText>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Billing_Zip_Postal__c</fullName>
        <label>Billing Zip/Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__CVV__c</fullName>
        <label>CVV</label>
        <length>5</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Card_Expiration_Month__c</fullName>
        <label>Card Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Card_Expiration_Year__c</fullName>
        <label>Card Expiration Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Card_Number__c</fullName>
        <label>Card Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Check_Number__c</fullName>
        <inlineHelpText>Use this field for Payeezy gateway</inlineHelpText>
        <label>Check Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Encrypted_CVV__c</fullName>
        <description>Holds the generated encrypt card value, especially used for the Eway Gateway.</description>
        <inlineHelpText>System use only</inlineHelpText>
        <label>Encrypted CVV</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Encrypted_Card_Number__c</fullName>
        <description>Holds the generated encrypt card value, especially used for the Eway Gateway.</description>
        <inlineHelpText>System use only</inlineHelpText>
        <label>Encrypted Card Number</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Is_Dummy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag indicates if the customer has used their Credit Card to pay but don&apos;t want the card details to be on the file. There should be a maximum of 1 such Dummy record per customer.</inlineHelpText>
        <label>Is Dummy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Name_on_Card__c</fullName>
        <label>Name on Card</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Payment_Profile_ID__c</fullName>
        <label>Payment Profile ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Token__c</fullName>
        <label>BrainTree Token</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Payment Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>invoiceit_s__Active_payment_methods_can_be_default</fullName>
        <active>true</active>
        <description>Only active payment methods can be default</description>
        <errorConditionFormula>invoiceit_s__Default__c &amp;&amp;  invoiceit_s__Active__c = false</errorConditionFormula>
        <errorDisplayField>invoiceit_s__Active__c</errorDisplayField>
        <errorMessage>Only active payment methods can be default</errorMessage>
    </validationRules>
</CustomObject>